Update with EOSNet.io custom data/format

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Jungle Testnet Monitor (CryptoLions.io)</title>
+	<title>EOSNet.io Monitor (EOSNet.io)</title>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -23,7 +23,6 @@
 
 
 		.bg {
-			background-image: linear-gradient(to bottom, rgba(255,255,255,0.8) 0%,rgba(255,255,255,.2) 100%), url(bg.jpg);
 			height: 100%;
 			background-position: center;
 			background-repeat: no-repeat;
@@ -78,8 +77,7 @@
 	<center>
 
 	<div class="container">
-		<h1>EOS Jungle Testnet Monitor</h1>
-		<h4>created by CryptoLions.io (<a target="_blank" href="https://github.com/CryptoLions">GitHub</a>)</h4>
+		<h1>EOSNet.io Testnet Monitor</h1>
 	    <BR><BR><BR>
 
 		<div class="row s1">
@@ -111,9 +109,9 @@
 				  <thead>
 				    <tr>
 				      <th scope="col">#</th>
-				      <th scope="col">BP name</th>
+				      <th scope="col" width=100>Name</th>
 				      <th scope="col">Answered</th>
-				      <th scope="col">Node Last Block</th>
+				      <th scope="col">Last Block</th>
 
 				      <th scope="col">Address</th>
 				      <th scope="col">HTTP port</th>
@@ -135,7 +133,7 @@
 
 
 	<BR><BR>
-	<a class="fotertext" target="_blank" href="http://CryptoLions.io">CryptoLions.io</a> | <a  class="fotertext" target="_blank" href="https://github.com/CryptoLions">GitHub</a>
+	<a class="fotertext" target="_blank" href="http://CryptoLions.io">&copy; 2018 CryptoLions.io</a> | <a  class="fotertext" target="_blank" href="https://github.com/CryptoLions">GitHub</a>
     </center>
 
 
