Fix table jumping

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 			<div class="col-sm-12 col-md-12">
 
 				<div class="table-responsive-sm vscroll">
-					<table class="table table-hover table-sm" id="bpTable">
+					<table class="table table-hover table-sm" id="bpTable" width="100%">
 						<thead>
 							<tr class="text-center">
 								<th scope="col">#</th>
-								<th scope="col" width="100">BP name</th>
+								<th scope="col" width="140px">BP name</th>
 								<th scope="col">Answered</th>
 								<th scope="col">Block</th>
 								<th scope="col">Produced</th>
