Format update + new BP node

--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
 						<thead>
 							<tr class="text-center">
 								<th scope="col">#</th>
-								<th scope="col" width="140px">BP name</th>
-								<th scope="col">Answered</th>
-								<th scope="col">Block</th>
-								<th scope="col">Produced</th>
-								<th scope="col">Block</th>
-								<th scope="col">Address</th>
-								<th scope="col">HTTP port</th>
-								<th scope="col">P2P port</th>
-								<th scope="col">Version</th>
-								<th scope="col">Organisation</th>
-								<th scope="col">Location</th>
+								<th scope="col" width="100" nowrap>BP name</th>
+								<th scope="col" nowrap>Answered</th>
+								<th scope="col" nowrap>Block</th>
+								<th scope="col" width="100" nowrap>Produced</th>
+								<th scope="col" nowrap>Block</th>
+								<th scope="col" nowrap>Address</th>
+								<th scope="col" nowrap>HTTP</th>
+								<th scope="col" nowrap>P2P</th>
+								<th scope="col" nowrap>Version</th>
+								<th scope="col" nowrap>Organisation</th>
+								<th scope="col" nowrap>Location</th>
 							</tr>
 						</thead>
 						<tbody>
